gcc/testsuite/algol68/compile/modules/program-11.a68
{ dg-modules "module10 module11 module12" }

{ Check that mode checking and coercion is performed
  inside controlled clauses in access clauses with
  several revelations.  }

access Module11,
       Module12
begin assert (foo = 10);
      assert (bar = "foo") { dg-error "" }
end
